--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/highlight.js": "^9.12.4",
+    "dayjs": "^1.11.13",
+    "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
+    "html2pdf.js": "^0.10.3",
+    "marked": "^15.0.8",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
